crates/tmark-writers/tests/snapshots/fixtures__role-index-suffix-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Relativity#ts-index([relativity], main: true) and#ts-index([Einstein], [_papers_]).

---requires---
{
  "packages": [
    "imakeidx"
  ],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
