crates/tmark-writers/tests/snapshots/fixtures__role-index-then-bracket@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>[b] and [e]</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
