crates/tmark-writers/tests/snapshots/fixtures__role-index-then-bracket@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\tsindex{a}[b] and \tsindex{c!d}[e]

---requires---
{
  "packages": [
    "imakeidx"
  ],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
