crates/tmark-writers/tests/snapshots/fixtures__role-index-then-bracket@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-index([a])\[b\] and #ts-index([c], [d])\[e\]

---requires---
{
  "packages": [],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
