crates/tmark-writers/tests/snapshots/fixtures__role-index@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Bytes\tsindex{endianness} and\tsindex{byte order!endianness} and\tsindex[main]{chocolate}.

---requires---
{
  "packages": [
    "imakeidx"
  ],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
