crates/tmark-writers/tests/snapshots/fixtures__role-index@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Bytes#ts-index([endianness]) and#ts-index([byte order], [endianness]) and#ts-index([chocolate], main: true).

---requires---
{
  "packages": [],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
