crates/tmark-writers/tests/snapshots/fixtures__role-inline-sugar@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Some <mark>marked</mark>, <del>deleted</del>, H<sub>2</sub>O, E=mc<sup>2</sup>, <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>S</kbd>, <strong>bold</strong> and <em>emph</em>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
