crates/tmark-writers/tests/snapshots/fixtures__role-inline-sugar@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Some \tsmark{marked}, \sout{deleted}, H\textsubscript{2}O, E=mc\textsuperscript{2}, \tskeys{Ctrl,Alt,S}, \textbf{bold} and \emph{emph}.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "tikz",
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-keystrokes",
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
