crates/tmark-writers/tests/snapshots/fixtures__role-inline-sugar@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Some #highlight[marked], #strike[deleted], H#sub[2]O, E=mc#super[2], #ts-keys("Ctrl", "Alt", "S"), *bold* and _emph_.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-keystrokes"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
