crates/tmark-writers/tests/snapshots/fixtures__role-raw-deprecated@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>A page break here.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
