crates/tmark-writers/tests/snapshots/fixtures__role-raw-deprecated@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
A page break \clearpage here.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
